--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,7 +1,14 @@
 <table>
+    <thead>
+        <tr>
+            <th>Title</th>
+        </tr>
+    </thead>
+    <tbody>
     <% for( var i=0;i<allTodos.length;i++){%>
     <tr>
         <td><%=allTodos[i].title%></td>
     </tr>
 <}%>
+    </tbody>
 </table>
