--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -4,8 +4,8 @@
         <link href="./css/styles.css" rel="stylesheet">
     </head>
     <body>
-        <%- include('views/header.ejs') %>
-        <%- include('views/todo.ejs') %>
-        <%- include('views/footer.ejs') %>
+        <%- include('header.ejs') %>
+        <%- include('todos.ejs') %>
+        <%- include('footer.ejs') %>
     </body>
 </html>
