--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -5,10 +5,10 @@
         </tr>
     </thead>
     <tbody>
-    <% for( var i=0;i<allTodos.length;i++){%>
+    <% for( var i=0;i<todos.length;i++){%>
     <tr>
-        <td><%=allTodos[i].title%></td>
+        <td><%=todos[i].title%></td>
     </tr>
-<}%>
+    <%}%>
     </tbody>
 </table>
