--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -1,7 +1,8 @@
 body{
-    background-color: greenyellow;
+    font-family: sans-serif;
+    background-color:white;
 }
-table{
-    width: 100%;
-    border: 2px black;
+
+.Todo-Item:hover .trash-icon{
+    display: block;
 }
