--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -25,7 +25,7 @@
                     </div>               
                 </form>
                 <div>
-                    <h5>Overdue<span id="count-overdue">0</span></h5>
+                    <h5>Overdue</h5> <span id="count-overdue">0</span>
                     <ul class = "list-none">
                         <li class="Todo-Item">
                             <div class="flex items-center w=fit my-2 px-2 py-2 rounded hover:bg-purple-50">
@@ -47,8 +47,8 @@
                         </li>
 
                     </ul>
-                    <h5>Due Today<span id="count-due-today">0</span></h5>
-                    <h5>Due Later<span id="count-due-later">0</span></h5>
+                    <h5>Due Today</h5><span id="count-due-today">0</span>
+                    <h5>Due Later</h5><span id="count-due-later">0</span>
                 </div>
             </div>
         </div>
