--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -3,14 +3,21 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale-1.0"/>
+        <meta name="csrf-token" content="<%=csrfToken%>"/>
         <title>Todo Manager</title>
         <link href="./css/styles.css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
+            var token = document
+            .querySelector('meta[name="csrf-token"]')
+            .getAttribute("content");
             function updateTodo(id){
                 fetch(`/todos/${id}/markAsCompleted`,{
                     method: "put",
                     headers: {"Content-Type":"application/json"},
+                    body: JSON.stringify({
+                        "_csrf":token
+                    }),
                 })
                 .then((res)=>{
                     if(res.ok){
@@ -23,6 +30,9 @@
                 fetch(`/todos/${id}`,{
                     method: "delete",
                     headers: {"Content-Type":"application/json"},
+                    body: JSON.stringify({
+                        "_csrf":token
+                    }),
                 })
                 .then((res)=>{
                     if(res.ok){
@@ -39,6 +49,7 @@
             <div class="col-start-2 col-span-4">
                 <%- include('header.ejs') %>
                 <form action="/todos" method="post">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken%>"/>
                     <div class="flex gap-2 py-4 leading-4">
                         <div class="flex-auto">
                             <input type="text" name="title" placeholder="New Task" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required/>
