--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -12,11 +12,12 @@
             .querySelector('meta[name="csrf-token"]')
             .getAttribute("content");
             function updateTodo(id){
-                fetch(`/todos/${id}/markAsCompleted`,{
+                fetch(`/todos/${id}`,{
                     method: "put",
                     headers: {"Content-Type":"application/json"},
                     body: JSON.stringify({
-                        "_csrf":token
+                        "_csrf":token,
+                        completed: !document.getElementById(`todo-checkbox-${id}`).checked,
                     }),
                 })
                 .then((res)=>{
@@ -55,7 +56,7 @@
                             <input type="text" name="title" placeholder="New Task" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required/>
                         </div>
                         <div class = "flex-auto">
-                            <input type="date" name="dueDate" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm"/>
+                            <input type="date" name="dueDate" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required/>
                         </div>
                         <div class = "flex-none">
                             <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">add</button>
@@ -66,6 +67,7 @@
                     <%- include('todos.ejs',{title:"Overdue",data:overDue}) %>
                     <%- include('todos.ejs',{title:"Due Today",data:dueToday}) %>
                     <%- include('todos.ejs',{title:"Due Later",data:dueLater}) %>
+                    <%- include('todos.ejs',{title:"Completed Items",data:completedItems}) %>
                 </div>
             </div>
         </div>
