--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,6 +1,6 @@
 <h5>
     <%= title %><span
-    class="bg-green-100 text-gray-800 text sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-grey-900 justify-center items-center items">
+    id="count-<%=title.toLowerCase().replace(' ','-')%>"class="bg-green-100 text-gray-800 text sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-grey-900 justify-center items-center items">
     <%= data.length %>
     </span>
 </h5>
