--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -9,42 +9,39 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
             var token = document
-                .querySelector('meta[name="csrf-token"]')
-                .getAttribute("content");
-            function updateTodo(id) {
-                let dec=document.querySelector(`#todo-checkbox-${id}`).checked
+            .querySelector('meta[name="csrf-token"]')
+            .getAttribute("content");
+            function updateTodo(id){
                 fetch(`/todos/${id}`,{
-                    method:"put",
-                    headers:{"Content-Type": "application/json"},
+                    method: "put",
+                    headers: {"Content-Type":"application/json"},
                     body: JSON.stringify({
-                        _csrf:token,
-                        completed: dec
-                    })
+                        "_csrf":token,
+                        completed: !document.getElementById(`todo-checkbox-${id}`).checked,
+                    }),
                 })
                 .then((res)=>{
                     if(res.ok){
                         window.location.reload();
-                    }   
-                    
+                    }
                 })
-                .catch((err)=>console.error(err));
+                .catch((err)=> console.error(err));
             }
-            function deleteTodo(id) {
+            function deleteTodo(id){
                 fetch(`/todos/${id}`,{
                     method: "delete",
                     headers: {"Content-Type":"application/json"},
                     body: JSON.stringify({
-                        "_csrf": token,
-                    })
-            })
-                    .then((res) => {
-                    if (res.ok) {
+                        "_csrf":token
+                    }),
+                })
+                .then((res)=>{
+                    if(res.ok){
                         window.location.reload();
                     }
                 })
-                    .catch((err) => console.error(err));
-                }
-        </script>
+                .catch((err)=> console.error(err));
+            }
         </script>
 
     </head>
