--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -4,74 +4,19 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale-1.0"/>
         <meta name="csrf-token" content="<%=csrfToken%>"/>
-        <title>Todo Manager</title>
-        <link href="./css/styles.css" rel="stylesheet">
+        <title><%=title %></title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <script>
-            var token = document
-            .querySelector('meta[name="csrf-token"]')
-            .getAttribute("content");
-            function updateTodo(id){
-                fetch(`/todos/${id}`,{
-                    method: "put",
-                    headers: {"Content-Type":"application/json"},
-                    body: JSON.stringify({
-                        "_csrf":token,
-                        completed: !document.getElementById(`todo-checkbox-${id}`).checked,
-                    }),
-                })
-                .then((res)=>{
-                    if(res.ok){
-                        window.location.reload();
-                    }
-                })
-                .catch((err)=> console.error(err));
-            }
-            function deleteTodo(id){
-                fetch(`/todos/${id}`,{
-                    method: "delete",
-                    headers: {"Content-Type":"application/json"},
-                    body: JSON.stringify({
-                        "_csrf":token
-                    }),
-                })
-                .then((res)=>{
-                    if(res.ok){
-                        window.location.reload();
-                    }
-                })
-                .catch((err)=> console.error(err));
-            }
-        </script>
-
+        <link href="./css/styles.css" rel="stylesheet">
     </head>
     <body>
         <div class="gird grid-cols-6">
             <div class="col-start-2 col-span-4">
                 <%- include('header.ejs') %>
-                <form action="/todos" method="post">
-                    <input type="hidden" name="_csrf" value="<%= csrfToken%>"/>
-                    <div class="flex gap-2 py-4 leading-4">
-                        <div class="flex-auto">
-                            <input type="text" name="title" placeholder="New Task" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required/>
-                        </div>
-                        <div class = "flex-auto">
-                            <input type="date" name="dueDate" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required/>
-                        </div>
-                        <div class = "flex-none">
-                            <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">add</button>
-                        </div>
-                    </div>               
-                </form>
-                <div>
-                    <%- include('todos.ejs',{title:"Overdue",data:overDue,id:"count-overdue"}) %>
-                    <%- include('todos.ejs',{title:"Due Today",data:dueToday,id:"count-due-today"}) %>
-                    <%- include('todos.ejs',{title:"Due Later",data:dueLater,id:"count-due-later"}) %>
-                    <%- include('todos.ejs',{title:"Completed Items",data:completedItems,id:"count-completed"}) %>
-                </div>
+                <p class="py-2">Welcome to the To-Do manager</p>
+                <p class="py-2">New here?<a href = '/signup' class="text-green-600">Sign-up now</a></p>
+                <p class="py-2">Already have an account?<a href = '/login' class="text-green-600">Login</a></p>
             </div>
         </div>
         
-        <%- include('footer.ejs') %>
     </body>
 </html>
