--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,23 +1,79 @@
-<h5>
-    <%= title %><span
-    id="<%=id%>" class="bg-green-100 text-gray-800 text sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-grey-900 justify-center items-center items">
-    <%= data.length %>
-    </span>
-</h5>
-<ul class = "list-none">
-    <% for (let i = 0; i < data.length; i++) { %>
-    <li class="Todo-Item">
-        <div class="flex items-center w-fit my-2 px-2 py-2 rounded hover:bg-purple-50">
-            <input id="todo-checkbox-<%= data[i].id%>" type = "checkbox" <%=data[i].completed? "checked": "" %> onclick="updateTodo(<%=data[i].id %>)" class="w-4 h-4 text-blue-600 bg-grey-300 rounded border">
-            <label for="todo-checkbox-<%= data[i].id%>" class ="ml-2 text-sm text-gray-600 cursor-pointer">
-                <%= data[i].title%>
-            </label>
-            <a href="#" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= data[i].id %>)">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                </svg>
-            </a>                                  
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale-1.0"/>
+        <meta name="csrf-token" content="<%=csrfToken%>"/>
+        <title>Todo Manager</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link href="./css/styles.css" rel="stylesheet">
+        <script>
+            var token = document
+            .querySelector('meta[name="csrf-token"]')
+            .getAttribute("content");
+            function updateTodo(id){
+                fetch(`/todos/${id}`,{
+                    method: "put",
+                    headers: {"Content-Type":"application/json"},
+                    body: JSON.stringify({
+                        "_csrf":token,
+                        completed: !document.getElementById(`todo-checkbox-${id}`).checked,
+                    }),
+                })
+                .then((res)=>{
+                    if(res.ok){
+                        window.location.reload();
+                    }
+                })
+                .catch((err)=> console.error(err));
+            }
+            function deleteTodo(id){
+                fetch(`/todos/${id}`,{
+                    method: "delete",
+                    headers: {"Content-Type":"application/json"},
+                    body: JSON.stringify({
+                        "_csrf":token
+                    }),
+                })
+                .then((res)=>{
+                    if(res.ok){
+                        window.location.reload();
+                    }
+                })
+                .catch((err)=> console.error(err));
+            }
+        </script>
+
+    </head>
+    <body>
+        <div class="gird grid-cols-6">
+            <div class="col-start-2 col-span-4">
+                <%- include('header.ejs') %>
+                <a href="/signout">Signout</a> 
+               <form action="/todos" method="post">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken%>"/>
+                    <div class="flex gap-2 py-4 leading-4">
+                        <div class="flex-auto">
+                            <input type="text" name="title" placeholder="New Task" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required/>
+                        </div>
+                        <div class = "flex-auto">
+                            <input type="date" name="dueDate" class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm" required/>
+                        </div>
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <div class = "flex-none">
+                            <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">add</button>
+                        </div>
+                    </div>               
+                </form>
+                <div>
+                    <%- include('todo.ejs',{title:"Overdue",data:overDue,id:"count-overdue"}) %>
+                    <%- include('todo.ejs',{title:"Due Today",data:dueToday,id:"count-due-today"}) %>
+                    <%- include('todo.ejs',{title:"Due Later",data:dueLater,id:"count-due-later"}) %>
+                    <%- include('todo.ejs',{title:"Completed Items",data:completedItems,id:"count-completed"}) %>
+                </div>
+            </div>
         </div>
-    </li>
-    <% } %>
-</ul>
+        
+        <%- include('footer.ejs') %>
+    </body>
+</html>
