--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -4,9 +4,9 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale-1.0"/>
         <meta name="csrf-token" content="<%=csrfToken%>"/>
-        <title><%=title %></title>
-        <script src="https://cdn.tailwindcss.com"></script>
+        <title>Todo</title>
         <link href="./css/styles.css" rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         <div class="gird grid-cols-6">
